Add Watch nodemon
