# docs/swagger.json
@@ -62,7 +62,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "v2 Articles"
+                    "Api-v2"
                 ],
                 "summary": "Get a single article",
                 "parameters": [
@@ -74,6 +74,36 @@
                         "required": true
                     }
                 ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/app.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/app.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v2/userlistsys": {
+            "post": {
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Api-v2"
+                ],
+                "summary": "Get list userssys 1",
                 "responses": {
                     "200": {
                         "description": "OK",
